--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel ="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
+  <div id="color">
     <h1>hello word </h1>
-</body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quibusdam reprehenderit ipsum deleniti ratione, rerum suscipit delectus neque voluptatem et voluptas illo hic doloribus? Ab nesciunt vel sapiente ducimus maiores?</p>
+  </div>
+  </body>
 </html>
